# advent_2025

./: .gitignore  Cargo.toml  README.md  output.txt  rustfmt.toml
input/: setup.py
src/: main.rs
src/solutions/: createday.py  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  mod.rs  template.rs
